complated filter by name and send email
